updated recursion documentation

--- a/Concepts/Recursion.ipynb
+++ b/Concepts/Recursion.ipynb
@@ -286,25 +286,209 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now the next question is how do we turn this into a recursive function? \n",
+    "# Recurrence Relation\n",
     "\n",
-    "* we are supposed to break downt he scope of this into something. \n",
-    "* we always get tow pairs."
+    "The next concept is a recurrence relation, and the base case. \n",
+    "\n",
+    "1. recurrence relation: the relationship between the result of a problem and the result of its subproblems.\n",
+    "2. base case: the case where one can compute the answer directly without any further recursion calls. Sometimes, the base cases are also called bottom cases, since they are often the cases where the problem has been reduced to the minimal scale. \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Reverse Linked List\n",
+    "\n",
+    "This involves writing a function that will do the following : \n",
+    "\n",
+    "\n",
+    "Input: 1->2->3->4->5->NULL\n",
+    "Output: 5->4->3->2->1->NULL\n",
+    "\n",
+    "### Pseudocode for the the iterative version : \n",
+    "\n",
+    "* I'll receive a linked list of Nodes that I wi\n",
+    "* I'll have the 'head' node, which will need to be switched to the other end\n",
+    "\n",
+    "* I'll keep a few pointers: \n",
+    "    - the head ( for later )\n",
+    "    - the previous node.\n",
+    "    - the current node\n",
+    "    - some value with the next node (which I will use)\n",
+    "   \n",
+    "* the switch itself. \n",
+    "\n",
+    "1->2->3\n",
+    "\n",
+    "1<-2->3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "5\n",
+      "4\n",
+      "3\n",
+      "2\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# Definition for singly-linked list.\n",
+    "class Node(object):\n",
+    "    def __init__(self, x):\n",
+    "        self.val = x\n",
+    "        self.next = None\n",
+    "    def set_next(self, nextval):\n",
+    "        self.next = nextval\n",
+    "\n",
+    "class LinkedList:\n",
+    "    # initialize the head\n",
+    "    def __init__(self):\n",
+    "        self.head = None\n",
+    "    def push(self, new_val):\n",
+    "        # to the beginning\n",
+    "        newNode = Node(new_val)\n",
+    "        newNode.next = self.head\n",
+    "        self.head = newNode\n",
+    "        \n",
+    "    def reverse(self):\n",
+    "        # deal with head\n",
+    "        current_node = self.head\n",
+    "        # initialize previous node\n",
+    "        previous_node = None\n",
+    "        \n",
+    "        while(current_node is not None):\n",
+    "            next_node = current_node.next\n",
+    "            current_node.next = previous_node\n",
+    "            previous_node = current_node\n",
+    "            current_node = next_node\n",
+    "        self.head = previous_node\n",
+    "        \n",
+    "    def printList(self):\n",
+    "        temp = self.head\n",
+    "        while(temp):\n",
+    "            print(temp.val)\n",
+    "            temp = temp.next\n",
+    "\n",
+    "global MyList\n",
+    "MyList = LinkedList()\n",
+    "MyList.push(5)\n",
+    "MyList.push(4)\n",
+    "MyList.push(3)\n",
+    "MyList.push(2)\n",
+    "MyList.push(1)\n",
+    "\n",
+    "MyList.printList()\n",
+    "MyList.reverse()\n",
+    "MyList.printList()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Now for a recursive version of this\n",
+    "\n",
+    "How is it going to be different? We have two pieces. A previous node and a current_node that need to be initialized. Can we keep calling this until we \n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "5\n",
+      "4\n",
+      "3\n",
+      "2\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# how would we do this recursively?\n",
+    "# Definition for singly-linked list.\n",
+    "\n",
+    "\n",
+    "    \n",
+    "\n",
+    "class Node(object):\n",
+    "    def __init__(self, x):\n",
+    "        self.val = x\n",
+    "        self.next = None\n",
+    "    def set_next(self, nextval):\n",
+    "        self.next = nextval\n",
+    "\n",
+    "class LinkedList:\n",
+    "    # initialize the head\n",
+    "    def __init__(self):\n",
+    "        self.head = None\n",
+    "    def push(self, new_val):\n",
+    "        # to the beginning\n",
+    "        newNode = Node(new_val)\n",
+    "        newNode.next = self.head\n",
+    "        self.head = newNode\n",
+    "    def helper_function_for_switch(self, previous_node, current_node):\n",
+    "        # what is our finishing function\n",
+    "        # if there is no more node\n",
+    "        if current_node.next == None:\n",
+    "            self.head = current_node\n",
+    "            # mark it done\n",
+    "            current_node.next = previous_node\n",
+    "            return\n",
+    "    \n",
+    "        next_node = current_node.next\n",
+    "        current_node.next = previous_node\n",
+    "        self.helper_function_for_switch(current_node, next_node)        \n",
+    "        \n",
+    "        \n",
+    "    def reverse(self):\n",
+    "        if self.head is None:\n",
+    "            return\n",
+    "        self.helper_function_for_switch(None, self.head)\n",
+    "    def printList(self):\n",
+    "        temp = self.head\n",
+    "        while(temp):\n",
+    "            print(temp.val)\n",
+    "            temp = temp.next\n",
+    "\n",
+    "global MyList\n",
+    "MyList = LinkedList()\n",
+    "MyList.push(5)\n",
+    "MyList.push(4)\n",
+    "MyList.push(3)\n",
+    "MyList.push(2)\n",
+    "MyList.push(1)\n",
+    "\n",
+    "MyList.printList()\n",
+    "MyList.reverse()\n",
+    "MyList.printList()"
+   ]
   },
   {
    "cell_type": "code",
