binary tree data structure and recursion

--- a/Concepts/Recursion.ipynb
+++ b/Concepts/Recursion.ipynb
@@ -491,11 +491,34 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Search in a Binary Search Tree\n",
+    "\n",
+    "Given the root node of a binary search tree (BST) and a value. You need to find the node in the BST that the node's value equals the given value. Return the subtree rooted with that node. If such node doesn't exist, you should return NULL.\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# First thing I will need to do is build my own binary tree and traversal\n",
+    "\n",
+    "class TreeNode(object):\n",
+    "    def __init__(self, x):\n",
+    "        self.val = x\n",
+    "        self.left = None\n",
+    "        self.right = None\n",
+    "        \n",
+    "class Tree(object):\n",
+    "    def __init__(self):\n",
+    "        self.root = None\n",
+    "    def "
+   ]
   }
  ],
  "metadata": {
