created Binary Tree

--- a/Concepts/Recursion.ipynb
+++ b/Concepts/Recursion.ipynb
@@ -317,12 +317,7 @@
     "    - the previous node.\n",
     "    - the current node\n",
     "    - some value with the next node (which I will use)\n",
-    "   \n",
-    "* the switch itself. \n",
-    "\n",
-    "1->2->3\n",
-    "\n",
-    "1<-2->3"
+    "   "
    ]
   },
   {
@@ -502,23 +497,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 \n",
+      "2 \n",
+      "3 \n",
+      "4 \n",
+      "8 \n"
+     ]
+    }
+   ],
    "source": [
-    "# First thing I will need to do is build my own binary tree and traversal\n",
-    "\n",
+    "# First thing I will need to do is build my own binary tree and traversal algorithm\n",
     "class TreeNode(object):\n",
     "    def __init__(self, x):\n",
     "        self.val = x\n",
     "        self.left = None\n",
     "        self.right = None\n",
-    "        \n",
-    "class Tree(object):\n",
+    "\n",
+    "class Tree(TreeNode):\n",
     "    def __init__(self):\n",
     "        self.root = None\n",
-    "    def "
+    "    \n",
+    "    def getRoot(self):\n",
+    "        return self.root\n",
+    "    \n",
+    "    def insert(self, val):\n",
+    "        if self.root == None:\n",
+    "            self.root = TreeNode(val)\n",
+    "        else:\n",
+    "            self._insert(val, self.root)\n",
+    "            \n",
+    "    def _insert(self, val, node):\n",
+    "        if val < node.val:\n",
+    "            if node.left is None:\n",
+    "                node.left = TreeNode(val)\n",
+    "            else:\n",
+    "                self._insert(val, node.left)\n",
+    "        else:\n",
+    "            if node.right is None:\n",
+    "                node.right = TreeNode(val)\n",
+    "            else:\n",
+    "                self._insert(val, node.right)\n",
+    "\n",
+    "    def find(self, val):\n",
+    "        if self.root == None:\n",
+    "            return None\n",
+    "        else:\n",
+    "            return self._find(val, self.root)\n",
+    "    \n",
+    "    def _find(self, val, node):\n",
+    "        if val == node.val:\n",
+    "            return node\n",
+    "        elif val < node.val and node.left is not None:\n",
+    "            self._find(val, node.left)\n",
+    "        elif val > node.val and node.right is not None:\n",
+    "            self._find(val, node.right)\n",
+    "                \n",
+    "                \n",
+    "    def printtree(self):\n",
+    "        if self.root is not None:\n",
+    "            self._printtree(self.root)\n",
+    "    \n",
+    "    def _printtree(self, node):\n",
+    "        if node is not None:\n",
+    "            self._printtree(node.left)\n",
+    "            print(str(node.val) + ' ')\n",
+    "            self._printtree(node.right)\n",
+    "        \n",
+    "\n",
+    "global MyTree\n",
+    "MyTree = Tree()\n",
+    "MyTree.insert(3)\n",
+    "MyTree.insert(4)\n",
+    "MyTree.insert(0)\n",
+    "MyTree.insert(8)\n",
+    "MyTree.insert(2)\n",
+    "MyTree.printtree()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
