update to cheatsheet

--- a/CheatSheet/Cheatsheet_LeetCode.ipynb
+++ b/CheatSheet/Cheatsheet_LeetCode.ipynb
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,8 +198,162 @@
     "    for index, _ in reversed(list(enumerate(digits))):\n",
     "        if digits[index] > 9:\n",
     "            # do the carry\n",
-    "            if index != 9"
+    "            if index != 0:\n",
+    "                digits[index-1] += 1\n",
+    "            else:\n",
+    "                digits = [1] + digits"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 69_Sqrt\n",
+    "* This function returns the integer of a square root of x\n",
+    "\n",
+    "What are the constraints? \n",
+    "- x is guaranteed to be an integer\n",
+    "- x is guaranteed to be > 0\n",
+    "\n",
+    "* we are basically doing a binary search for the 69_Sqrt\n",
+    "\n",
+    "### Base cases\n",
+    "- if x is 0 or x is 1 then we return x\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sqrt(x):\n",
+    "    # let's handle the base case first\n",
+    "    if x is 0 or x is 1:\n",
+    "        return x\n",
+    "\n",
+    "\n",
+    "    start = 1\n",
+    "    end = x // 2 # the middle\n",
+    "    answer = None\n",
+    "\n",
+    "    while start <= end:\n",
+    "        mid = (start + end) // 2 # to do the integer division\n",
+    "        sqr = mid * mid\n",
+    "        if sqr is x: # we got it!\n",
+    "\n",
+    "            answer = int(mid)\n",
+    "            break\n",
+    "        elif sqr <= x:\n",
+    "            # get rid of left search space\n",
+    "            start = mid + 1\n",
+    "            answer = int(mid)\n",
+    "        else:\n",
+    "            end = mid - 1\n",
+    "    return answer\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 264_UglyNumber\n",
+    "* what is an ugly number?\n",
+    "* it is a number whose prime factors only include 2, 3, 5\n",
+    "\n",
+    "for example 6 is an ugly number : \n",
+    " - because 2x3 = 6\n",
+    "\n",
+    " ## how do we approach it?\n",
+    "\n",
+    "- the one that I can get working is an iterative solution: \n",
+    "- loop through 2,3,5\n",
+    "- go until % is 0 \n",
+    "- and then keep dividing down\n",
+    "\n",
+    "- if at the end we have 1 then we are ugly, if not, then we are not. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def isUgly(num):\n",
+    "    if num <= 0:\n",
+    "        return False\n",
+    "    for p in [2,3,5]:\n",
+    "        while num % p == 0:\n",
+    "            num %= p\n",
+    "    return num == 1\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 322_CoinChange\n",
+    "\n",
+    "You are given coins of different denominations and a total amount of money amount. Write a function to compute the fewest number of coins that you need to make up that amount. If that amount of money cannot be made up by any combination of the coins, return -1.\n",
+    "\n",
+    "## example : \n",
+    "\n",
+    "coins = [1,2,5]\n",
+    "amount = 11\n",
+    "return = 3 (which is 5+5+1)\n",
+    "\n",
+    "## this has the hallmarks of a dynamic programming solution.\n",
+    "\n",
+    "- overlapping sub-problem\n",
+    "- overlapping structure"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def coinChange(coins, num_to_search):\n",
+    "    num_coins = len(coins)\n",
+    "    # we make a table that can be referred to\n",
+    "\n",
+    "    table = [0 for i in range(num_to_search + 1)]\n",
+    "    \n",
+    "    # base case if V = 0\n",
+    "    table[0] = 0\n",
+    "\n",
+    "    # initialize all values to infinite : \n",
+    "    for i in range(1, num_to_search + 1):\n",
+    "        table[i] = sys.maxsize\n",
+    "    for i in range(1, num_to_search + 1):\n",
+    "        for j in range(num_coins):\n",
+    "            if coins[j] <= i:\n",
+    "                sub_res = table[i - coins[j]]\n",
+    "                if (sub_res != sys.maxsize and subres + 1 < table[i])\n",
+    "                    table[i] = subres + 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# BinaryTree Methods\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -218,7 +372,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.4-final"
   }
  },
  "nbformat": 4,
