--- a/CheatSheet/Cheatsheet_LeetCode.ipynb
+++ b/CheatSheet/Cheatsheet_LeetCode.ipynb
@@ -316,9 +316,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-3-d1f0abdacacc>, line 17)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-3-d1f0abdacacc>\"\u001b[0;36m, line \u001b[0;32m17\u001b[0m\n\u001b[0;31m    if (sub_res != sys.maxsize and subres + 1 < table[i])\u001b[0m\n\u001b[0m                                                         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "def coinChange(coins, num_to_search):\n",
@@ -338,14 +347,124 @@
     "            if coins[j] <= i:\n",
     "                sub_res = table[i - coins[j]]\n",
     "                if (sub_res != sys.maxsize and subres + 1 < table[i])\n",
-    "                    table[i] = subres + 1"
+    "                    table[i] = subres + 1\n",
+    "    return table[num_to_search]\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# BinaryTree Methods\n"
+    "# BinaryTree Methods\n",
+    "\n",
+    "* Binary trees are the bread and butter of it all. \n",
+    "\n",
+    "\n",
+    "## how does a BFS work : \n",
+    "## we are just adding to a queue, which is first in first out. \n",
+    "\n",
+    "* it's just a line that you get into "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "class BFS_traversal: \n",
+    "    def __init__(self):\n",
+    "        self.root = None\n",
+    "        self.bfsqueue = dequeue()\n",
+    "    def BFS_traversal(self, node):\n",
+    "        if none is None:\n",
+    "            # no root. base case. just return\n",
+    "            return\n",
+    "        # add the root \n",
+    "        self.bfsqueue.append(node):\n",
+    "        while(len(self.bfsqueue) > 0):\n",
+    "            print(node.val)\n",
+    "            node = self.bfsqueue.popleft() # is the first one\n",
+    "            if node.left is not None:\n",
+    "                self.bfsqueue.append(node.left)\n",
+    "            if node.right is not None:\n",
+    "                self.bfsqueue.append(node.right)\n",
+    "\n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## How does a DFS traversal work\n",
+    "\n",
+    "\"\"\"\n",
+    "Tree Traversals (Inorder, Preorder and Postorder)\n",
+    "Unlike linear data structures (Array, Linked List, Queues, Stacks, etc) which have only one logical way to traverse them, trees can be traversed in different ways. Following are the generally used ways for traversing trees.\n",
+    "\n",
+    "\n",
+    "│       ┌── 14\n",
+    "│   ┌── 10\n",
+    "│   │   └── 9\n",
+    "└── 8\n",
+    "    │   ┌── 6\n",
+    "    └── 3\n",
+    "        └── 2\n",
+    "\n",
+    "\n",
+    "(A) InOrder (Left, Root, Right) : 2, 3, 6, 8, 9, 10, 14\n",
+    "(B) PreOrder (root, left, rghgt) : 8, 3, 2, 6, 10, 9, 14\n",
+    "(C) postOrder  (left, right, rot): 2, 6, 3, 9, 14, 10, 8"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "NameError",
+     "evalue": "name 'BinaryTree' is not defined",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-4b805e334d83>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# so we are going to extend the binary tree to have a BFS_Traversal\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mclass\u001b[0m \u001b[0mDFStree\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mBinaryTree\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mTree\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__init__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mroot\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdfsstack\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdeque\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'BinaryTree' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# so we are going to extend the binary tree to have a BFS_Traversal\n",
+    "class DFStree(BinaryTree.Tree):\n",
+    "    def __init__(self):\n",
+    "        self.root = None\n",
+    "        self.dfsstack = deque()\n",
+    "\n",
+    "    def preOrder(self, node):\n",
+    "        if node is None:\n",
+    "            return\n",
+    "        print(node.val)\n",
+    "        self.preOrder(node.left)\n",
+    "        self.preOrder(node.right)\n",
+    "\n",
+    "    def postOrder(self, node):\n",
+    "        if node is None:\n",
+    "            return\n",
+    "        self.postOrder(node.left)\n",
+    "        self.postOrder(node.right)\n",
+    "        print(node.val)\n",
+    "\n",
+    "\n",
+    "    def inOrder(self, node):\n",
+    "        if node is None:\n",
+    "            return\n",
+    "        self.inOrder(node.left)\n",
+    "        print(node.val)\n",
+    "        self.inOrder(node.right)\n",
+    ""
    ]
   },
   {
